2017-01-30 rryqszq4 <ngxphp@gmail.com>
	* dev code "ngx_http_php_output.h", "ngx_http_php_output.c"

	* add nginx directive "log_by_php", "log_by_php_file"

	* add php api "ngx::_exit"
	
	
2016-11-09 rryqszq4 <ngxphp@gmail.com>
	* fixd ngx_socket_tcp receive complete

	* fixd ngx_socket_tcp epoll_wait error and disable keep-alive, when client active close

	* add php api "ngx_time::sleep"

	* fixed issues #14 core dump, hight concurrence used of ngx_socket_tcp
	  After system call pthread_cancel, wait for convar_clean and execute php end

	* fixed issues #15 ngx_time::sleep can't stop in apache ab test.

	* fixed issues #16 ngx_socket_tcp::receive receive data backup not need to parse http header.

	* bumped copyright date to 2017.

	* bumped version to 0.0.7

2016-10-15 rryqszq4 <ngxphp@gmail.com>
	* add php api "ngx_log::error"

	* fixd support dns resolver

	* add php api "ngx_socket_tcp::settimeout"

	* change pthread status joinable to detached

	* fixd issues #10 thread deadlock

	* fixd issues #11 core dump, main thread waiting for child thread enable , but part of ctx not use.

	* bumped version to 0.0.6

2016-09-16 rryqszq4 <ngxphp@gmail.com>
	* dev code "ngx_http_php_stream.h", "ngx_http_php_stream.c"
	
	* fixd php api "ngx_socket_tcp", "::connect, ::send, ::receive, ::close" support rediscovery

	* add nginx directive "content_thread_by_php", "content_thread_by_php_file"

	* fixd "ngx_socket_tcp::send" send pack error

	* fixd server active push to client about "ngx_socket_tcp::receive"

	* bumped version to 0.0.5

2016-05-30 rryqszq4 <ngxphp@gmail.com>